@@ -17,6 +17,7 @@
 #   Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 # 
 
+import stat
 from Namcap.ruleclass import *
 
 class package(TarballRule):
@@ -24,13 +25,15 @@ class package(TarballRule):
 	description = "Checks file permissions."
 	def analyze(self, pkginfo, tar):
 		for i in tar.getmembers():
-			if not i.mode & 4 and not (i.issym() or i.islnk()):
+			if not i.mode & stat.S_IROTH and not (i.issym() or i.islnk()):
 				self.warnings.append(("file-not-world-readable %s", i.name))
-			if i.mode & 2 and not (i.issym() or i.islnk()):
+			if i.mode & stat.S_IWOTH and not (i.issym() or i.islnk()):
 				self.warnings.append(("file-world-writable %s", i.name))
-			if not i.mode & 1 and i.isdir():
+			if not i.mode & stat.S_IXOTH and i.isdir():
 				self.warnings.append(("directory-not-world-executable %s", i.name))
 			if str(i.name).endswith('.a') and i.mode != 0o644 and i.mode != 0o444:
 				self.warnings.append(("incorrect-library-permissions %s", i.name))
+			if i.mode & (stat.S_ISUID | stat.S_ISGID):
+				self.warnings.append(("file-setugid %s", i.name))
 
 # vim: set ts=4 sw=4 noet:
